tests/snapshots/physics_bdd__falling_delta.snap
---
source: tests/physics_bdd.rs
assertion_line: 65
expression: "&ddlog.deltas"
---
[
  NewPosition(
    entity: 1,
    x: 0.5,
    y: 0.5,
    z: 0.0,
  ),
]
