tests/snapshots/physics_bdd__force_position.snap
---
source: tests/physics_bdd.rs
assertion_line: 96
expression: "&ddlog.deltas"
---
[
  NewPosition(
    entity: 1,
    x: 0.1,
    y: 0.0,
    z: 0.0,
  ),
]
