tests/snapshots/physics_bdd__force_velocity.snap
---
source: tests/physics_bdd.rs
assertion_line: 95
expression: "&ddlog.velocity_deltas"
---
[
  NewVelocity(
    entity: 1,
    vx: 0.1,
    vy: 0.0,
    vz: 0.0,
  ),
]
