tests/snapshots/physics_bdd__friction_position.snap
---
source: tests/physics_bdd.rs
assertion_line: 119
expression: "&ddlog.deltas"
---
[
  NewPosition(
    entity: 1,
    x: 1.6999999,
    y: 0.0,
    z: 0.0,
  ),
]
